Fixed graph visibility and tabs switching

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,13 @@
 .tab-content{
   width: 100%;
 }
+
+.tab-container{
+  flex-direction: column;
+}
+.tab-parent{
+  flex-direction: row;
+}
 /* If you want to apply it to everything except certain classes element/component types, e.g. "everything except h2 and class myclass" */
 /* *:not(h2):not(.myclass){
   font-family: Garamond;
